Initial commit from script

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="icon" href="/assets/logo.png"/>
     <link rel="stylesheet" href="/css/tablet.css" media="(min-width: 426px)"/>
     <link rel="stylesheet" href="/css/desktop.css" media="(min-width: 769px)"/>
-    <title>Confercciones CB</title>
+    <title>Asociacion de profesionales</title>
 </head>
 <body>
     <header class="nav-container">
@@ -51,8 +51,9 @@
         <section class="hero">
             <div class="hero-title">
                 <div>
-                    <h1>Confercciones CB</h1>
-                    <h2>Fabricando con amor.</h2>
+                    <h1>Asociacion de profesionales</h1>
+                    <h2>S.P</h2>
+                    <h2>En accidentes de transito y otros servicios</h2>
                 </div>
             </div>
 
@@ -115,13 +116,13 @@
         <section id="aboutus" class="about-us">
             <div class="about-us-text">
                 <h2>Sobre nosotros</h2>
-                <p>Confecciones CB se dedica a la creación de prendas que destacan por su calidad y cuidado en cada detalle. Nuestra filosofía es sencilla: fabricar con amor para ofrecer ropa que no solo sea atractiva, sino que también ofrezca comodidad y durabilidad a quienes la visten.</p>
+                <p>Asesoría jurídicas y una imagen que haga alusión, asesorías contables y una imagen que haga alusión, venta y arrendamiento de inmuebles y Ia imagen que haga alusión, venta de pólizas igualmente una imagen que haga alusión. </p>
 
-                <p>En Confecciones CB, utilizamos los mejores materiales y técnicas de confección avanzadas para garantizar que cada pieza cumpla con los más altos estándares. Nos esforzamos por que cada prenda refleje nuestra pasión por la moda y nuestro compromiso con la satisfacción del cliente.</p>
+                <p>Sp Servicios Profesionales cuenta con una gran trayectoria gracias a sus más de 10 años de experiencia, nos caracteriza una actitud profesional con un fuerte sentido de la discreción para mantener la información sensible segura y privada, Nuestro objetivo es ofrecer soluciones efectivas y personalizadas, asegurando que cada cliente reciba la asistencia necesaria para resolver sus problemas de manera satisfactoria.</p>
 
-                <p>Nuestras colecciones abarcan una amplia gama de estilos, desde ropa casual hasta atuendos más formales, siempre con un enfoque en la calidad y el confort. Cada prenda es elaborada con esmero, asegurando que sea tanto funcional como elegante, ideal para diversas ocasiones.</p>
+                <p>SP es una marca perteneciente a la asociación de profesionales, la cual nació en el año 2016, y progresivamente ha ido incorporando más servicios a su portafolio en las áreas jurídicas, contables, inmobiliarias y la venta de pólizas.</p>
 
-                <p>Confecciones CB: Fabricando con amor. Descubre cómo nuestras prendas pueden transformar tu guardarropa, ofreciéndote piezas que se sienten tan bien como se ven, hechas con el corazón y diseñadas para durar.</p>
+                <p>Dentro del área jurídica hay un departamento especializado en accidentes de tránsito, el cual cuenta con una amplia experiencia en la atención jurídica en homicidios y lesiones en accidentes de tránsito, permitiendo obtener resultados efectivos, sin generar costos al demandante, puesto que la asesoría no se cobra.</p>
             </div>
             <div class="about-us-img">
                 <img src="./assets/img.jpg" alt="">
@@ -148,7 +149,7 @@
                     Si necesitas más información o quieres contratar alguno de nuestros servicios, no dudes en contactarnos. Estamos disponibles para resolver tus dudas y brindarte la mejor atención.
 
                     Haz clic en el botón de abajo para comunicarte con nosotros directamente a través de WhatsApp. ¡Estamos a solo un mensaje de distancia!.</p>
-                <a href="https://wa.link/4vuzei"><button>Contactanos por whatsapp</button></a>
+                <a href="https://wa.link/i7rg8z"><button>Contactanos por whatsapp</button></a>
             </div>
         </section>
 
@@ -160,15 +161,15 @@
             <h3>Siguenos</h3>
             <div class="social-icons">
                 <a href="https://www.instagram.com"><img src="/assets/logotipo-de-instagram.png" alt=""></a>
-                <a href="https://www.facebook.com/profile.php?id=61566249565914&mibextid=ZbWKwL"><img src="/assets/facebook.png" alt=""></a>
+                <a href="https://www.facebook.com"><img src="/assets/facebook.png" alt=""></a>
                 <a href="https://www.tiktok.com"><img src="/assets/tik-tok.png" alt=""></a>
-                <a href="https://wa.link/4vuzei"><img src="/assets/whatsapp.png" alt=""></a>
+                <a href="https://wa.link/i7rg8z"><img src="/assets/whatsapp.png" alt=""></a>
             </div>
         </div>
 
         <div class="number">
-            <p>(+57)313-324-9826</p>
-            <p>Conchis25@hotmail.com</p>
+            <p>(+57)319-316-8227</p>
+            <p>maria7abogados@gmail.com</p>
         </div>
 
         <div class="logo-footer">
