Initial commit from script

--- a/index.html
+++ b/index.html
@@ -51,9 +51,11 @@
         <section class="hero">
             <div class="hero-title">
                 <div>
-                    <h1>Asociacion de profesionales</h1>
-                    <h2>S.P</h2>
-                    <h2>En accidentes de transito y otros servicios</h2>
+                    <h1>Asociacion de profesionales S.P</h1>
+                    <h2>En accidentes de transito</h2>
+                    <h2>en temas juridicos</h2>
+                    <h2>en temas de inmobiliarios</h2>
+                    <h2>en temas contables y venta de polizas</h2>
                 </div>
             </div>
 
@@ -116,8 +118,6 @@
         <section id="aboutus" class="about-us">
             <div class="about-us-text">
                 <h2>Sobre nosotros</h2>
-                <p>Asesoría jurídicas y una imagen que haga alusión, asesorías contables y una imagen que haga alusión, venta y arrendamiento de inmuebles y Ia imagen que haga alusión, venta de pólizas igualmente una imagen que haga alusión. </p>
-
                 <p>Sp Servicios Profesionales cuenta con una gran trayectoria gracias a sus más de 10 años de experiencia, nos caracteriza una actitud profesional con un fuerte sentido de la discreción para mantener la información sensible segura y privada, Nuestro objetivo es ofrecer soluciones efectivas y personalizadas, asegurando que cada cliente reciba la asistencia necesaria para resolver sus problemas de manera satisfactoria.</p>
 
                 <p>SP es una marca perteneciente a la asociación de profesionales, la cual nació en el año 2016, y progresivamente ha ido incorporando más servicios a su portafolio en las áreas jurídicas, contables, inmobiliarias y la venta de pólizas.</p>
