--- a/index.html
+++ b/index.html
@@ -160,16 +160,18 @@
         <div class="social-media">
             <h3>Siguenos</h3>
             <div class="social-icons">
-                <a href="https://www.instagram.com"><img src="/assets/logotipo-de-instagram.png" alt=""></a>
-                <a href="https://www.facebook.com"><img src="/assets/facebook.png" alt=""></a>
+                <a href="https://www.instagram.com/sp.servicios.profesionales/"><img src="/assets/logotipo-de-instagram.png" alt=""></a>
+                <a href="https://www.facebook.com/people/SP-Servicios-Profesionales/61565527354939/"><img src="/assets/facebook.png" alt=""></a>
                 <a href="https://www.tiktok.com"><img src="/assets/tik-tok.png" alt=""></a>
-                <a href="https://wa.link/i7rg8z"><img src="/assets/whatsapp.png" alt=""></a>
+                <a href="https://wa.link/lavlxv"><img src="/assets/whatsapp.png" alt=""></a>
             </div>
         </div>
 
         <div class="number">
-            <p>(+57)319-316-8227</p>
-            <p>maria7abogados@gmail.com</p>
+            <a href="https://wa.link/lavlxv">
+                <p>(+57)319-316-8227</p>
+            </a>
+            <p>spserviciosprofesionales2@gmail.com</p>
         </div>
 
         <div class="logo-footer">
