--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
 
         <div class="number">
             <p>(+57)319-316-8227</p>
-            <p>maria7abogados@gmail.com</p>
+            <p>SPserviciosprofesionales2@gmail.com</p>
         </div>
 
         <div class="logo-footer">
